objects/Program_Project__c.object
<CustomObject>
    <description>Stores all Data Warehouse actual quantity data</description>
    <fields>
        <fullName>Actual_Send_Date_DW__c</fullName>
        <label>Actual Send Date (DW)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Quantity__c</fullName>
        <description>This represents the actual quantity - per project - from the Data Warehouse (read-only)</description>
        <inlineHelpText>This represents the actual quantity - per project - from the Data Warehouse (read-only)</inlineHelpText>
        <label>Contact Quantity (DW)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Type_Description__c</fullName>
        <description>Reflects the Product/Project Type description (as it is seen in Data Warehouse) 
&apos;product_type_desc&apos;</description>
        <inlineHelpText>Reflects the Product/Project Type description (as it is seen in Data Warehouse) 
&apos;product_type_desc&apos;</inlineHelpText>
        <label>Product Type Description</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program (Royall)</label>
        <referenceTo>Royall_Program__c</referenceTo>
        <relationshipLabel>Program Projects</relationshipLabel>
        <relationshipName>Program_Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Desc__c</fullName>
        <description>The project description as defined in the Program Assistant</description>
        <inlineHelpText>The project description as defined in the Program Assistant</inlineHelpText>
        <label>Project Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Program Project</label>
    <nameField>
        <label>Program Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>